summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^Moria:10: error: not found: value foward
      foward
      ^