summative.moria.Moria.scala.code
while (! isFacingWall() ) {
  if (! isOverBaggle) {
    setDirection(Direction.EAST)
    forward()
  }
  else {
    pickupBaggle()
    back()
    while(! isOverBaggle() ) {
      foward
    }
    backward()
    dropBaggle()
    back()
    forward()
  }
}
right()
forward()
left()
forward()
forward()